--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script src="http://code.angularjs.org/1.0.0rc10/angular-1.0.0rc10.js"></script>
-	<script src="../compiled/angular-bootstrap-with-scripts.js"></script>
+	<script src="angular-bootstrap-with-scripts.js"></script>
 	<script src="demo.js"></script>
 </head>
 <body ng-controller="MainCtrl" ng-init="modalShown = false">
