--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 		<h1>Tabs</h1>
 		<div class="row">
 			<div class="span6">
-				Hello.
+				Tabs are declared in HTML.  Have a strap-tabs container element around your tabs, then just create the tabs with strap-tab elements with a title attr.
+
+				The strap-tabs are automatically hooked up with the container's tab-title list.  
 			</div>
 			<div class="span6">
 				<!--
