--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 		<h1>Tabs</h1>
 		<div class="row">
 			<div class="span6">
-				Tabs are declared in HTML.  Have a strap-tabs container element around your tabs, then just create the tabs with strap-tab elements with a title attr.
-
+				<br />
+				Create a strap-tabs container element around your tabs, then just create the tabs with strap-tab elements with a title attr.
+				<br /><br />
 				The strap-tabs are automatically hooked up with the container's tab-title list.  
 			</div>
 			<div class="span6">
