--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 						<p>One fine body!</p>
 					</div>
 					<div class="modal-footer">
-						<a class="btn btn-primary" data-dismiss="modal" href="#myModal">Close with data-dismiss</button>
+						<a class="btn btn-primary" data-dismiss="modal" href="#myModal">Close with data-dismiss</a>
 						<a class="btn btn-primary" ng-click="$parent.modalShown = false">Close with Scope Variable</a>
 					</div>
 				</div>
