updated to angular 1.0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Angular Bootstrap UI</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-	<script src="http://code.angularjs.org/1.0.0rc10/angular-1.0.0rc10.js"></script>
+	<script src="http://code.angularjs.org/1.0.0/angular-1.0.0.js"></script>
 	<script src="https://raw.github.com/ajoslin/angular-bootstrap-ui/master/compiled/angular-bootstrap-with-scripts.js"></script>
 	<script src="demo.js"></script>
 </head>
