--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="http://code.angularjs.org/1.0.0/angular-1.0.0.js"></script>
 	<script src="https://raw.github.com/ajoslin/angular-bootstrap-ui/master/compiled/angular-bootstrap-with-scripts.js"></script>
 	<script src="demo.js"></script>
+	<div clas="btn-primary" style="padding: 25px;"><h1>This project is now out of use.  I recommend using <a href="http://github.com/angular-ui">angular-ui</a></h1></div>
 </head>
 <body ng-controller="MainCtrl" ng-init="modalShown = false">
 	<div class="container">
